--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "build": "webpack --mode production",
     "build-android": "webpack --mode production --env.android && npx cap copy android && npx cap open android",
     "build-ios": "webpack --mode production --env.ios && npx cap copy ios && npx cap open ios",
-    "build-electron": "webpack --mode production --env.electron && npx cap copy electron"
+    "build-electron": "webpack --mode production --env.electron && npx cap copy electron",
+    "pack": "electron-builder --dir",
+    "dist": "electron-builder"
   },
   "license": "MIT",
   "dependencies": {
@@ -21,10 +23,11 @@
   },
   "devDependencies": {
     "copy-webpack-plugin": "^5.0.2",
+    "css-loader": "^2.1.1",
+    "electron-builder": "^22.5.1",
     "expose-loader": "0.7.5",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.5.0",
-    "css-loader": "^2.1.1",
     "ts-loader": "5.3.3",
     "typescript": "3.3.3",
     "webpack": "4.29.6",
